# Any4Cast

./: README.md  setup.cfg
src/Any4Cast/: data.py  neural.py
src/tests/: test.py  test_data.json
