[metadata]
name = Any4Cast
version = 0.0.1
author = Xumatro
author_email = 01092004.jw@gmail.com
description = General Purpose Predictive Analytics Tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Xumatro/Any4Cast
project_urls =
    Bug Tracker = https://github.com/Xumatro/Any4Cast/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL-3.0
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires = 
    

[options.packages.find]
where = src